added logout configuration which is not currently supported in library

--- a/samples/keycloak-sample/build.gradle
+++ b/samples/keycloak-sample/build.gradle
@@ -10,6 +10,10 @@ buildscript {
     }
 }
 
+if (!hasProperty('mainClass')) {
+    ext.mainClass = 'com.example.ColombiaApplication'
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
